# local-translate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yaml
scripts/: generate-licenses.sh  merge-licenses.mjs
scripts/linux/: build.sh
scripts/macos/: build.sh  download-py.sh
scripts/windows/: build.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  about.toml  pyproject.toml  tauri.bundle.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-python/local_translate/: __init__.py  __main__.py  _python.py  commands.py  languages.py  mlx_worker.py  model_manager.py  tts_manager.py  tts_worker.py
src/lib/: LanguageSelector.svelte  Settings.svelte  TranslatePanel.svelte  api.ts
