[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = ["local-translate"]

[tool.uv]
prerelease = "allow"

[tool.uv.workspace]
members = ["src-tauri"]

[tool.uv.sources]
local-translate = { workspace = true }

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/dist",
    "**/.*",
    "**/pyembed",
    "**/target",
]
