[package]
name = "local-translate"
version = "0.1.0"
description = "Local offline translation app"
edition = "2021"

[lib]
name = "local_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "local-translate"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25" }
pytauri = { version = "0.8", features = [] }
tauri-plugin-pytauri = { version = "0.8" }
