[project]
name = "local-translate"
version = "0.1.0"
description = "Local offline translation using TranslateGemma"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytauri == 0.8.*",
    "pydantic == 2.*",
    "anyio == 4.*",
    "huggingface_hub",
    "mlx-lm",
]

[project.entry-points.pytauri]
ext_mod = "local_translate.ext_mod"

[build-system]
requires = ["setuptools >= 80", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src-python"] }
